# YandexAlgoTrain_4

./: README.md
additional/: CMakeLists.txt  task_1.cpp  task_10.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp  task_8.cpp  task_9.cpp
overkill and methods of its optimization/: CMakeLists.txt  task_2.cpp
quick, merge, radix sort/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp
shortest paths in weighted graphs/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
